--- a/Index.html
+++ b/Index.html
@@ -56,12 +56,12 @@
             <h2>Donate Today</h2>
             <p>
                 Sylhet the amount of your donation. <br> Give the flood victims a chance to stand and help the floods
-                peopel
+                people.
             </p>
         </div>
         <div class="feacher-box">
             <div class="box">
-                <img src="icons/food.svg" alt="">
+                <img src="icons/food.png" alt="">
                 <h2>Food for a family</h2>
                 <p>
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
@@ -69,16 +69,16 @@
                 </p>
             </div>
             <div class="box box-style-2">
-                <img src="icons/family.svg" alt="">
-                <h2>Food for a family</h2>
+                <img src="icons/shelter.png" alt="">
+                <h2>Shelter for a Family</h2>
                 <p>
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
                     duis enim velit mollit.
                 </p>
             </div>
             <div class="box box-style-3">
-                <img src="icons/reading.svg" alt="">
-                <h2>Food for a family</h2>
+                <img src="icons/Frame-1.png" alt="">
+                <h2>Education for a Child</h2>
                 <p>
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
                     duis enim velit mollit.
@@ -101,13 +101,13 @@
                 <a class="button-style" href="">How to Contribute?</a>
             </div>
             <div class="blog-image">
-                <img src="images/blog-1.jpg" alt="">
+                <img src="images/donation6.jpg" alt="">
             </div>
         </div>
         <div class="blog blog-2">
 
             <div class="blog-image">
-                <img src="images/blog-2.jpg" alt="">
+                <img src="images/donation10.jpg" alt="">
             </div>
             <div class="blog-content">
                 <h2>Their lives depend on your donation</h2>
@@ -159,7 +159,7 @@
     <footer>
         <div class="footer-area">
             <h2>create donate website </h2>
-            <p>copy@rightbyfarzanayasmin</p>
+            <p>copy@rightbyfarzanayasmin645</p>
         </div>
     </footer>
 </body>
